# androidcrypt-secutil

./: CHANGELOG.md  CMakeLists.txt  README.md
cmake/: explicit_bzero.cmake  memset_s.cmake
dependencies/: CMakeLists.txt
include/terra/secutil/: secure_allocator.h  secure_array.h  secure_deleter.h  secure_deque.h  secure_erase.h  secure_string.h  secure_vector.h
src/: CMakeLists.txt  secure_erase.cpp
test/: CMakeLists.txt
test/secure_allocator/: CMakeLists.txt  test_secure_allocator.cpp
test/secure_array/: CMakeLists.txt  test_secure_array.cpp
test/secure_deleter/: CMakeLists.txt  test_secure_deleter.cpp
test/secure_erase/: CMakeLists.txt  test_secure_erase.cpp
test/secure_types/: CMakeLists.txt  test_secure_types.cpp
